# python-mergecal

./: .all-contributorsrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-empty-issue.md  config.yml
.github/workflows/: ci.yml  labels.yml  poetry-upgrade.yml  upgrader.yml
docs/: conf.py  index.md  installation.md  template.md  usage.md
src/mergecal/: __init__.py  __main__.py  calendar_merger.py  cli.py  main.py
templates/: CHANGELOG.md.j2
tests/: conftest.py  test_cli.py  test_color_merging.py  test_component_selection.py  test_dunder_main.py  test_issue_1_include_timezones.py  test_issue_7_generate_vtimezones.py  test_main.py  test_merge_calendars.py  test_merge_calendars_with_date_recurrence_id.py  test_merge_calendars_with_no_uids.py  test_merge_twice.py  test_multiple_vcalendars.py  test_platform_calendars.py  test_rfc5545_compliance.py  test_templates.py  test_with_doctest.py
tests/calendars/: android_etar.ics  another_event.ics  calendar_with_date_recurrence_id.ics  color_apple.ics  color_event_own.ics  color_none.ics  color_rfc7986.ics  four_week_recurring.ics  four_week_recurring_with_recurrence_id.ics  google_with_vtimezone.ics  google_x_location.ics  no_uids_calendar.ics  no_vtimezone_google.ics  one_event.ics  rfc_7986.ics  test_empty_calendar.ics  test_single_event.ics  thunderbird.ics  two_vcalendars.ics
